# home-theater-automation-system

./: .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  certclear.sh  certgen.sh  config.sh  example.env
.github/workflows/: release.yml
android_control_client/: .editorconfig  .gitignore  settings.gradle.kts
android_control_client/app/: build.gradle.kts
android_control_client/app/src/main/: AndroidManifest.xml
android_control_client/gradle/: libs.versions.toml
android_control_client/gradle/wrapper/: gradle-wrapper.properties
esp32_firmare/: CMakeLists.txt  Makefile  README.md  partitions.csv
esp32_firmare/components/app_api/: CMakeLists.txt  app_api_auth.c  app_api_handlers.h
esp32_firmare/components/eth_w5500/include/: eth_w5500.h
esp32_firmare/components/helper/: CMakeLists.txt
esp32_firmare/components/https_server/include/: https_server.h
esp32_firmare/components/i2c_bus/include/: i2c_bus.h
esp32_firmare/components/io_expander/: io_expander.c
esp32_firmare/components/io_input/include/: io_input.h
esp32_firmare/components/lcd_driver/: CMakeLists.txt  lcd_driver.c
esp32_firmare/components/lcd_driver/include/: lcd_driver.h
esp32_firmare/components/nvs_manager/include/: nvs_manager.h
esp32_firmare/components/uart_bus/: uart_bus.c
esp32_firmare/components/ui/: ui_icon.h
esp32_firmare/main/: CMakeLists.txt  main.c
esp32_firmware/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  sdkconfig.defaults
esp32_firmware/components/app_api/: CMakeLists.txt  app_api.c  app_api_auth.c  app_api_handlers.h  app_api_ota_update.c  app_api_registry.c  app_api_system.c  app_api_ws.c
esp32_firmware/components/app_api/include/: app_api.h
esp32_firmware/components/cyclic_task/: CMakeLists.txt  cyclic_task.c
esp32_firmware/components/env_sensor/: CMakeLists.txt  env_sensor.c
esp32_firmware/components/eth_w5500/: eth_w5500.c
esp32_firmware/components/https_server/: CMakeLists.txt  https_server.c
esp32_firmware/components/i2c_bus/: i2c_bus.c
esp32_firmware/components/io_button/: CMakeLists.txt  io_button_handlers.c  io_button_handlers.h  io_button_registry.c
esp32_firmware/components/io_expander/: io_expander.c
esp32_firmware/components/io_input/: CMakeLists.txt  io_input.c
esp32_firmware/components/lcd_driver/: lcd_driver.c
esp32_firmware/components/led_ind/: led_ind.c
esp32_firmware/components/ntp_service/: CMakeLists.txt  ntp_service.c
esp32_firmware/components/nvs_manager/: CMakeLists.txt  nvs_manager.c
esp32_firmware/components/peripheral_control/: CMakeLists.txt  peripheral_control.c
esp32_firmware/components/storage/: storage.c
esp32_firmware/components/sys_ind/: CMakeLists.txt  sys_ind.c
esp32_firmware/components/uart_bus/: uart_bus.c
esp32_firmware/components/ui/: CMakeLists.txt  ui.c  ui_icon.c  ui_icon.h  ui_manager.c
esp32_firmware/components/ui_manager/: CMakeLists.txt  ui_manager.c
esp32_firmware/components/ws_cmd_router/: CMakeLists.txt  ws_cmd_handlers.c  ws_cmd_handlers.h  ws_cmd_router.c
esp32_firmware/components/ws_dispatcher/: CMakeLists.txt  ws_dispatcher.c
esp32_firmware/components/ws_queue/: CMakeLists.txt  ws_queue.c
esp32_firmware/main/: CMakeLists.txt  main.c
esp32_provisioning_tool/: .gitignore  Makefile  README.md  dev_setup.py  main.py  pyproject.toml
esp32_provisioning_tool/app/: esp_device_manager.py  ntp_service.py  provisioning_generator.py  provisioning_ui.py
esp32_signal_server/: .gitignore  CMakeLists.txt  Makefile  README.md  example.env  init_dev_storage  partitions.csv  sdkconfig  sdkconfig.defaults
esp32_signal_server/components/app_api/: app_api_registry.c
esp32_signal_server/components/eth_w5500/: CMakeLists.txt  eth_w5500.c
esp32_signal_server/components/helper/: helper.c
esp32_signal_server/components/https_server/: https_server.c
esp32_signal_server/components/i2c_bus/: CMakeLists.txt  i2c_bus.c
esp32_signal_server/components/io_expander/: CMakeLists.txt
esp32_signal_server/components/led_ind/: CMakeLists.txt
esp32_signal_server/components/nvs_manager/: nvs_manager.c
esp32_signal_server/components/peripheral_control/: peripheral_control.c
esp32_signal_server/components/storage/: CMakeLists.txt  storage.c
esp32_signal_server/components/uart_bus/: CMakeLists.txt
esp32_signal_server/components/ui/: CMakeLists.txt  ui_icon.c  ui_manager.c
esp32_signal_server/main/: CMakeLists.txt  auth_nvs.h  eth_w5500.c  eth_w5500.h  idf_component.yml  lcd_driver.c  lcd_driver.h  lcd_icons.c  lcd_icons.h  led_ind.c  led_ind.h  main.c  reset_button.h  rest_handlers.c  rest_server.c  uart_bus.c  uart_bus.h  ui.h  util.c  util.h  utils.c  utils.h
esp32_signal_server/main/driver/: eth_w5500.c  eth_w5500.h  i2c_bus.c  i2c_bus.h  uart_bus.c  uart_bus.h
esp32_signal_server/main/network/: auth_nvs.c  auth_nvs.h  rest_handlers.h  rest_server.c  rest_server.h
esp32_signal_server/main/system/: led_ind.c  led_ind.h  reset_button.c  reset_button.h  storage.c  storage.h
esp32_signal_server/main/ui/: lcd_driver.c  lcd_driver.h  ui.c
(+127 files in other folders)
