idf_component_register(
  SRCS
    "main.c"

  INCLUDE_DIRS
    "."

  REQUIRES
    esp_netif
    esp_event
    esp_eth
    driver
    log
    freertos
    app_api
    cyclic_task
    env_sensor
    eth_w5500
    helper
    https_server
    i2c_bus
    io_expander
    io_button
    io_input
    sys_ind
    nvs_manager
    storage
    uart_bus
    ui
    ws_cmd_router
    ws_dispatcher
    ws_queue
)
